2002-11-18  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.4.1.tar.gz: released version 0.4.1. It's just time
	for a new snapshot release: Since 0.4, there are some bug fixes,
	enhancements especially to the XSD smidump driver and some
	added and updated Standard MIBs.

2002-10-23  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Fixed a missing error checks in case SMIv2
	application types that are not imported. Aligned with similar
	checks for SPPI PIBs. Thanks to Mike.

	* mibs/iana/*: Updated the IANA MIBs as of 2002-10-23.

	* configure.in: Updated AC_DEFINE()'s to contain defaults and
	removed the obsolete acconfig.h file.
	
2002-09-06  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/L2TP-MIB: added (RFC 3371).

2002-07-16  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/HC-RMON-MIB: added (RFC 3273).

2002-07-09  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Fixed a NULL pointer dereference. Thanks to Bill.
	
	* mibs/ietf/DSMON-MIB: added (RFC 3287).

2002-06-21  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/: Updated man pages.
	
	* test/: Updated test suite.
	
	* libsmi-0.4.tar.gz: released version 0.4. There are two major
	improvements in this release: It is the first release that
	supports parsing and dumping of SPPI PIB modules (thanks to
	Moritz for this great piece of good work!). Additionally the
	support of an XML Schema dump format (smidump -f xsd) has
	received a lot of enhancements, which might be of interest to
	some people (thanks to Torsten for his great former and
	ongoing work on all the details of this topic!).

2002-06-19  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/data.c: Fixed illegal reference to already freed type
	structs in smiFreeData(). Thanks to Nick.

	* lib/parser-smi.h: Added a check for mismatching tables'
	SEQUENCE OF types and row types. Thanks to Mike.

2002-06-14  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
	
	* mibs/ietf/GSMP-MIB: added (RFC 3295).
